Crash undoing object rename in edit mode #60809

Closed
opened 2019-01-23 23:53:10 +01:00 by seef · 9 comments

System Information
Operating system: Win10
Graphics card: GeforceGTX950

Blender Version
2.80, dc3b5024be1a4, 2019-01-23, win64

Blender sometimes crashs by pressing Ctrl+Z directly after a mesh renamed (in my case Cube.001)

SysInfo:system-info.txt

**System Information** Operating system: Win10 Graphics card: GeforceGTX950 **Blender Version** 2.80, dc3b5024be1a4, 2019-01-23, win64 Blender sometimes crashs by pressing Ctrl+Z directly after a mesh renamed (in my case Cube.001) SysInfo:[system-info.txt](https://archive.blender.org/developer/F6383160/system-info.txt)
Author

Added subscriber: @seef

Added subscriber: @seef

#60877 was marked as duplicate of this issue

#60877 was marked as duplicate of this issue

Added subscriber: @brecht

Added subscriber: @brecht
Campbell Barton was assigned by Brecht Van Lommel 2019-01-24 07:32:19 +01:00

Confirmed.

Enter edit mode on default cube, rename cube object, then press Ctrl+Z.

Confirmed. Enter edit mode on default cube, rename cube object, then press Ctrl+Z.
Brecht Van Lommel changed title from Blender sometimes crashs by pressing Ctrl+Z directly after renaming a mesh to Crash undoing object rename in edit mode 2019-01-24 07:32:52 +01:00

Added subscriber: @matc

Added subscriber: @matc

This fixes the problem. But I'm not sure whether meshedit_undo should be handling this in the first place.

diff --git a/source/blender/blenkernel/intern/undo_system.c b/source/blender/blenkernel/intern/undo_system.c
index 12cd8fc43e9..c2a814128af 100644
--- a/source/blender/blenkernel/intern/undo_system.c
+++ b/source/blender/blenkernel/intern/undo_system.c
@@ -126,8 +126,6 @@ static void undosys_id_ref_store(void *UNUSED(user_data), UndoRefID *id_ref)
 	BLI_assert(id_ref->name[0] == '\0');
 	if (id_ref->ptr) {
 		BLI_strncpy(id_ref->name, id_ref->ptr->name, sizeof(id_ref->name));
-		/* Not needed, just prevents stale data access. */
-		id_ref->ptr = NULL;
 	}
 }
This fixes the problem. But I'm not sure whether meshedit_undo should be handling this in the first place. ``` diff --git a/source/blender/blenkernel/intern/undo_system.c b/source/blender/blenkernel/intern/undo_system.c index 12cd8fc43e9..c2a814128af 100644 --- a/source/blender/blenkernel/intern/undo_system.c +++ b/source/blender/blenkernel/intern/undo_system.c @@ -126,8 +126,6 @@ static void undosys_id_ref_store(void *UNUSED(user_data), UndoRefID *id_ref) BLI_assert(id_ref->name[0] == '\0'); if (id_ref->ptr) { BLI_strncpy(id_ref->name, id_ref->ptr->name, sizeof(id_ref->name)); - /* Not needed, just prevents stale data access. */ - id_ref->ptr = NULL; } } ```

@matc, this only works in the simple case, it wont work if a memfile undo step as been loaded.


On Friday I looked into possible fixes for this:

Some options are:

  • Add memfile undo pushes when renaming.
  • Use something besides the name (eg, a UUID) for each ID instead of it's name.
  • Use memfile undo for all modes and optimize it to remove the need for different undo systems (see: #56163).

I'll try some solutions this week in a branch and post any updates here.

@matc, this only works in the simple case, it wont work if a memfile undo step as been loaded. --- On Friday I looked into possible fixes for this: Some options are: - Add memfile undo pushes when renaming. - Use something besides the name (eg, a UUID) for each ID instead of it's name. - Use memfile undo for all modes and optimize it to remove the need for different undo systems (see: #56163). I'll try some solutions this week in a branch and post any updates here.

This issue was referenced by 78719abc01

This issue was referenced by 78719abc01f11fee9652711ca64f83d0c777bb4f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60809
No description provided.