Library: tag memfile undo for writing after rename

Needed for T60809 fix.